src/objects/Assessments__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Class</fullName>
                </value>
                <value>
                    <fullName>Take Home</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Open Notes</fullName>
                </value>
                <value>
                    <fullName>Closed Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageGrade__c</fullName>
        <formula>TotalGrade__c /  Count__c</formula>
        <label>Average Grade</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaxGrade__c</fullName>
        <label>Max Grade</label>
        <summarizedField>Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinGrade__c</fullName>
        <label>Min Grade</label>
        <summarizedField>Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReTake__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Take</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeGiven__c</fullName>
        <label>Time Given</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalGrade__c</fullName>
        <label>Total Grade</label>
        <summarizedField>Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPS</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Class__c</field>
            <operation>equals</operation>
            <value>CPS100</value>
        </filters>
        <label>CPS</label>
    </listViews>
    <listViews>
        <fullName>Math</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Class__c</field>
            <operation>equals</operation>
            <value>MAT100</value>
        </filters>
        <label>Math</label>
    </listViews>
    <nameField>
        <label>Assessments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>Homework</fullName>
        <active>true</active>
        <label>Homework</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quiz</fullName>
        <active>true</active>
        <label>Quiz</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>